--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Borel&family=Poppins:wght@400;500;700&display=swap');
+
+*{
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  display: 100vh;
+  background-color: #feea13;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo{
+  font-size: 2rem;
+  margin: 20px 40px;
+  color: black;
+  font-weight: 700;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  width: 100%;
+  height: 800px;
+}
+
+ textarea{
+  resize: none;
+  padding: 20px 40px;
+  outline: none;
+  height: 500px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+}
+
+.button-area{
+margin-top: 10px;
+width: 100%;
+display: flex;
+justify-content: center;
+}
+
+button{
+  border: 3px solid black;
+  border-radius: 15px;
+  color: black;
+  width: 50%;
+  height: 60px;
+  font-size: 1rem;
+  background-color: #feea13;
+}
+
+button:hover{
+  cursor: pointer;
+}
+
+.container{
+  padding: 20px 40px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+
+.create-note-area{
+  width: 45%;
+}
+
+.note-list-area{
+  width: 45%;
+  height: 600px;
+  overflow: auto;
+}
+
+.note-list-area > ul{
+  list-style-type: none;
+  color: rgb(28, 28, 28);
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.note-list-area > ul > li{
+  margin-right: 20px;
+}
+
+/* --------_EMPTY NOTE MESSAGE_________-- */
+
+
+.empty-note{
+  margin-left: 10%;
+  width: 60%;
+  height: 80%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.empty-note p{
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* ----------_ICONS-----------____ */
+
+
+.icon-container{
+  display: flex;
+}
+.side-icons{
+  margin-left: 4px;
+  padding: 4px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.note-icon{
+  font-size: 4rem;
+}
+.note-list-area p{
+  font-size: .75rem;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.note-icon:hover,.delete-icon:hover,.edit-icon:hover{
+  cursor: pointer;
 }
