--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@ body{
 }
 
 .container{
-  width: 100%;
+  margin: 0 40px;
+  width: 90%;
   height: 800px;
 }
 
@@ -49,10 +50,12 @@ button{
   height: 60px;
   font-size: 1rem;
   background-color: #feea13;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
-button:hover{
-  cursor: pointer;
+button:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .container{
