--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ button{
 button:hover {
   transform: scale(1.1);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .container{
